--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,16 @@
             "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "gdb"
+        },
+        {
+            "name": "Python: Current File (CONVERT_ROM venv)",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/CONVERT_ROM",
+            "python": "${workspaceFolder}/CONVERT_ROM/.venv/Scripts/python.exe",
+            "justMyCode": true
         }
     ]
 }
