--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ build/*
 !build/.gitkeep
 source/std/GW_ROM/*
 !source/std/GW_ROM/.gitkeep
+source/std/GW_ROM_RGDS/*
+!source/std/GW_ROM_RGDS/.gitkeep
 
 CONVERT_ROM/tmp/img/*
 !CONVERT_ROM/tmp/img/.gitkeep
