--- a/android/app/src/main/cpp/CMakeLists.txt
+++ b/android/app/src/main/cpp/CMakeLists.txt
@@ -46,10 +46,12 @@ find_library(log-lib log)
 find_library(android-lib android)
 find_library(egl-lib EGL)
 find_library(glesv3-lib GLESv3)
+find_library(aaudio-lib aaudio)
 
 target_link_libraries(yokoi
     ${log-lib}
     ${android-lib}
     ${egl-lib}
     ${glesv3-lib}
+    ${aaudio-lib}
 )
