forget file "decompress" from rom

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ CONVERT_ROM/tmp/img/*
 CONVERT_ROM/rom/*
 !CONVERT_ROM/rom/.gitkeep
 !CONVERT_ROM/rom/default_console.png
-
+CONVERT_ROM/rom/*/.gitkeep
 *.pyc
 
 games_path.py
