--- a/android/app/src/main/cpp/CMakeLists.txt
+++ b/android/app/src/main/cpp/CMakeLists.txt
@@ -4,6 +4,12 @@ project(yokoi_android LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(YOKOI_EXTERNAL_ROMPACK_ONLY "Build without compiled-in ROMs/assets; require external ROM pack at runtime" OFF)
+
+# Minimum external pack content version that this build accepts.
+# Bump this when the app expects newer pack contents (textures/layout/etc.).
+set(YOKOI_ROMPACK_REQUIRED_CONTENT_VERSION "1" CACHE STRING "Minimum required ROM pack content version")
+
 # Repo root from android/app/src/main/cpp
 set(YOKOI_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../../../..")
 
@@ -24,6 +30,10 @@ list(FILTER YOKOI_STD_SRC EXCLUDE REGEX ".*[/\\\\]GW_ROM_RGDS[/\\\\].*")
 file(GLOB_RECURSE YOKOI_GW_ROM_SRC
     "${YOKOI_ROOT}/source/std/GW_ROM_RGDS/*.cpp"
 )
+
+if(YOKOI_EXTERNAL_ROMPACK_ONLY)
+    set(YOKOI_GW_ROM_SRC "")
+endif()
 
 # Exclude 3DS-only/example sources if they slip in
 list(FILTER YOKOI_STD_SRC EXCLUDE REGEX ".*\\/sound_example\\/.*")
@@ -52,6 +62,12 @@ add_library(yokoi SHARED
     ${YOKOI_STD_SRC}
     ${YOKOI_GW_ROM_SRC}
 )
+
+if(YOKOI_EXTERNAL_ROMPACK_ONLY)
+    target_compile_definitions(yokoi PRIVATE YOKOI_EXTERNAL_ROMPACK_ONLY=1)
+endif()
+
+target_compile_definitions(yokoi PRIVATE YOKOI_ROMPACK_REQUIRED_CONTENT_VERSION=${YOKOI_ROMPACK_REQUIRED_CONTENT_VERSION})
 
 target_include_directories(yokoi PRIVATE
     "${CMAKE_CURRENT_LIST_DIR}/core"
