--- a/android/app/src/main/cpp/CMakeLists.txt
+++ b/android/app/src/main/cpp/CMakeLists.txt
@@ -13,11 +13,11 @@ set(YOKOI_ROMPACK_REQUIRED_CONTENT_VERSION "3" CACHE STRING "Minimum required RO
 # Repo root from android/app/src/main/cpp
 set(YOKOI_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../../../..")
 
-file(GLOB_RECURSE YOKOI_SM5XX_SRC
+file(GLOB_RECURSE YOKOI_SM5XX_SRC CONFIGURE_DEPENDS
     "${YOKOI_ROOT}/source/SM5XX/*.cpp"
 )
 
-file(GLOB_RECURSE YOKOI_STD_SRC
+file(GLOB_RECURSE YOKOI_STD_SRC CONFIGURE_DEPENDS
     "${YOKOI_ROOT}/source/std/*.cpp"
 )
 
@@ -27,7 +27,7 @@ file(GLOB_RECURSE YOKOI_STD_SRC
 list(FILTER YOKOI_STD_SRC EXCLUDE REGEX ".*[/\\\\]GW_ROM[/\\\\].*")
 list(FILTER YOKOI_STD_SRC EXCLUDE REGEX ".*[/\\\\]GW_ROM_RGDS[/\\\\].*")
 
-file(GLOB_RECURSE YOKOI_GW_ROM_SRC
+file(GLOB_RECURSE YOKOI_GW_ROM_SRC CONFIGURE_DEPENDS
     "${YOKOI_ROOT}/source/std/GW_ROM_RGDS/*.cpp"
 )
 
